# technical-exercise

./: .gitignore  .pre-commit-config.yaml  Dockerfile.api  README.md  main.py  pyproject.toml
.github/: CI.yaml
.github/workflows/: CD.yaml
conf/base/: catalog.yml  parameters.yml
conf/local/: .gitkeep
docs/: 00_instructions.md  01_Project_Architecture.md  02_Training.md  03_Deployment.md  instructions.md
notebooks/: eda.ipynb
pipelines/training/: pipeline.py
src/: __init__.py  exceptions.py  pipeline_registry.py  settings.py
src/api/: main.py
src/train/: preprocessing.py  trainer.py
tests/: test_api.py  test_preprocessing.py
